# PRIV-chip8-emulator

./: CMakeLists.txt
conan/: conanfile.txt  macos-m1-cmake-clang15-cpp20  macos-m1-cmake-homebrew-gcc13-cpp20
src/: CMakeLists.txt  main.cpp
src/Emulator/: CMakeLists.txt  Emulation.cpp  Emulation.h
src/OpenGL/: CMakeLists.txt  Engine.h  PixelMap.cpp  PixelMap.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/OpenGL/shaders/: vertex_shader.glsl
test/: CMakeLists.txt
test/Emulator/: Blank.cpp  CMakeLists.txt
test/OpenGL/: CMakeLists.txt
